--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ bugtracker = "https://github.com/DickerDackel/oiiai/issues"
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.package-data]
+assets = ['src/oiiai/assets/*']
+
 [tool.pytest.ini_options]
 addopts = "-rA"
 testpaths = [
